# Fastor

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Fastor.cpp.autosave  Fastor.h  Fastor.pro.user.e7e7219  LICENSE  Makefile  README.md  library.json
Fastor/: Fastor.h
Fastor/backend/: adjoint.h  backend.h  cofactor.h  cyclic_0.h  determinant.h  doublecontract.h  dyadic.h  inner.h  inverse.h  libxsmm_backend.h  lufact.h  lut_inverse.h  matmul.h  matmul_kernels.h  norm.h  outer.h  tensor_cross.h  trace.h  transpose.h  voigt.h
Fastor/commons/: commons.h  cpuid.h  extended_algorithms.h  print.h  timeit.h  types.h  utils.h
Fastor/config/: config.h  cpuid.h  macros.h
Fastor/experimental/: SingleValueTensor.h
Fastor/expressions/: expression_traits.h  expressions.h
Fastor/extended_intrinsics/: extintrin.h
Fastor/math/: internal_math.h
Fastor/meta/: einsum_meta.h  meta.h  opmin_meta.h  tensor_meta.h  tensor_post_meta.h  tensor_pre_meta.h
Fastor/simd_math/: simd_math.h  sleef_backend.h  sleef_backend_u10.h  sleef_backend_u35.h
Fastor/simd_vector/: SIMDVector.h  extintrin.h  simd_vector_abi.h  simd_vector_base.h  simd_vector_common.h  simd_vector_complex_double.h  simd_vector_complex_float.h  simd_vector_complex_scalar.h  simd_vector_double.h  simd_vector_float.h  simd_vector_int.h  simd_vector_int32.h  simd_vector_int64.h  simd_vector_scalar.h  simd_vector_t_scalar.h
Fastor/tensor/: AbstractTensor.h  AbstractTensorFunctions.h  Aliasing.h  BlockIndexing.h  ForwardDeclare.h  IndexRetriever.h  (+16 more)
backend/: adjoint.h  backend.h  cofactor.h  cyclic_0.h  determinant.h  doublecontract.h  dyadic.h  inverse.h  libxsmm_backend.h  matmul.h  norm.h  outer.h  tensor_cross.h  trace.h  transpose.h  voigt.h
benchmark/: README.md  benchmark_backend.h  detect_compiler
benchmark/benchmark_finite_difference/: CMakeLists.txt  Makefile  benchmark_finite_difference.cpp  benchmark_finite_difference_c.cpp
benchmark/benchmark_material/: CMakeLists.txt  ElectromechanicalModel_0.h  Makefile  _LegendreTransform_.h  _MaterialBase_.h  _helper_.h  benchmark_materials.cpp
commons/: commons.h  extended_algorithms.h  print.h  timeit.h  types.h  utils.h  write.h
data/: FastorConfig.cmake.in  fastor.pc.in
dd/: Makefile  main  main.cpp
experimental/: SingleValueTensor.h
expressions/: expressions.h
extended_intrinsics/: extintrin.h
math/: internal_math.h
meta/: einsum_meta.h  opmin_meta.h  tensor_meta.h  tensor_post_meta.h  tensor_pre_meta.h
simd_vector/: SIMDVector.h  simd_vector_base.h  simd_vector_double.h  simd_vector_float.h  simd_vector_int.h  simd_vector_int64.h
tensor/: AbstractTensor.h  AbstractTensorFunctions.h  AuxiliaryPlugin.h  BlockIndexing.h  FMAPlugin.h  ForwardDeclare.h  IndexRetriever.h  PODConverters.h  Range.h  ScalarIndexing.h  SmartExpressionsPlugin.h  SpecialisedConstructors.h  Tensor.h  TensorEvaluator.h  TensorFunctions.h  TensorIO.h  TensorInplaceOperators.h  TensorMethods.h  TensorRef.h  ranges.h  tensor_funcs.h  tensor_print.h
tensor_algebra/: abstract_contraction.h  contraction.h  contraction_no_opt.h  contraction_single.h  einsum.h  indicial.h  network_contraction.h  network_contraction_no_opmin.h  outerproduct.h  permutation.h  reduction.h  reshape.h  strided_contraction.h  strided_network_contraction.h  summation.h
tests/: CMakeLists.txt  Makefile  README.md  test_auxiliary.cpp  test_basics.cpp  test_basics.h  test_binary_cmp_ops.cpp  test_complex_expressions.cpp  test_contraction.cpp  test_einsum.cpp  test_fixed_views_1d.cpp  test_fixed_views_2d.cpp  test_fixed_views_nd.cpp  test_fixed_views_nd_2.cpp  test_inverse.cpp  test_lazy_matmul.cpp  test_linalg.cpp  test_lu.cpp  test_matmul.cpp  test_matmul_small.cpp  test_mixed_views.cpp  test_random_views_1d.cpp  test_random_views_nd.cpp  test_simd_vectors.cpp  test_simd_vectors_complex.cpp  test_solve.cpp  test_tensormap.cpp  test_tmatmul_masked.cpp  test_tmatmul_unmasked.cpp  test_views_1d.cpp  test_views_2d.cpp  test_views_nd.cpp  test_views_nd_2.cpp
tests/test_auxiliary_funcs/: CMakeLists.txt  test_auxiliary_funcs.cpp
tests/test_binary_cmp_ops/: CMakeLists.txt  test_binary_cmp_ops.cpp
tests/test_booleans/: CMakeLists.txt  test_booleans.cpp
tests/test_complex_expressions/: CMakeLists.txt  test_complex_expressions.cpp
tests/test_einsum/: CMakeLists.txt  test_contraction.cpp  test_einsum.cpp  test_einsum_single.cpp
tests/test_einsum_explicit/: CMakeLists.txt  test_einsum_explicit_1.cpp  test_einsum_explicit_2.cpp  test_einsum_explicit_3.cpp
tests/test_fixed_views_1d/: CMakeLists.txt  test_fixed_views_1d.cpp
tests/test_fixed_views_2d/: CMakeLists.txt  test_fixed_views_2d.cpp
tests/test_fixed_views_nd/: CMakeLists.txt  test_fixed_views_nd.cpp  test_fixed_views_nd_2.cpp
tests/test_inverse/: CMakeLists.txt  test_inverse.cpp
tests/test_linalg/: CMakeLists.txt  test_linalg.cpp
tests/test_lu/: CMakeLists.txt  test_lu.cpp
tests/test_math_functions/: CMakeLists.txt  test_math_functions.cpp
tests/test_matmul/: CMakeLists.txt  test_lazy_matmul.cpp  test_matmul.cpp  test_matmul_small.cpp
tests/test_mixed_views/: CMakeLists.txt  test_mixed_views.cpp
tests/test_numerics/: CMakeLists.txt  test_numerics.cpp
tests/test_permute/: CMakeLists.txt  test_permute.cpp
tests/test_qr/: CMakeLists.txt  test_qr.cpp
tests/test_random_views/: CMakeLists.txt  test_random_views_1d.cpp  test_random_views_nd.cpp
tests/test_simd_vectors/: CMakeLists.txt  test_simd_vectors.cpp  test_simd_vectors_complex.cpp
tests/test_solve/: CMakeLists.txt  test_solve.cpp
tests/test_tensor_basics/: CMakeLists.txt  test_tensor_basics.cpp
tests/test_tensormap/: CMakeLists.txt  test_tensormap.cpp
tests/test_tmatmul/: CMakeLists.txt  test_tmatmul_masked.cpp  test_tmatmul_unmasked.cpp
tests/test_transpose/: CMakeLists.txt  test_transpose.cpp
tests/test_unary_bool_ops/: CMakeLists.txt  test_unary_bool_ops.cpp
tests/test_views_1d/: CMakeLists.txt  test_views_1d.cpp
tests/test_views_2d/: CMakeLists.txt  test_views_2d.cpp
tests/test_views_nd/: CMakeLists.txt  test_views_nd.cpp  test_views_nd_2.cpp
(+274 files in other folders)
